fixed button text to hidden by overflow

--- a/src/components/result/ResultBoard.module.css
+++ b/src/components/result/ResultBoard.module.css
@@ -14,6 +14,7 @@ p {
 .playAgainButton {
   width: 100%;
   white-space: nowrap;
+  overflow: hidden;
 }
 .playAgainButton:hover {
   color: white;
